# MitraSETI

./: .gitignore  Dockerfile  IMPROVEMENTS_LOG.md  LICENSE  README.md  docker-compose.yml  main.py  paths.py  pipeline.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api/: __init__.py  database.py  main.py
catalog/: __init__.py  radio_catalogs.py  sky_position.py
core/: Cargo.toml
core/src/: dedoppler.rs  filterbank.rs  lib.rs  rfi_filter.rs  types.rs
data/: download_Voyager.sh  download_all_BL_data.sh
docs/: github_issues.md
inference/: __init__.py  feature_extractor.py  gpu_utils.py  ood_detector.py  signal_classifier.py
mitraseti/: __init__.py
models/: signal_classifier_v1.pt  training_embeddings.npy  training_history.json
scripts/: __init__.py  batch_process.py  benchmark.py  cadence_analysis.py  download_bl_data.py  generate_training_data.py  streaming_observation.py  streaming_report.py  train_model.py
tests/: __init__.py  test_core.py  test_pipeline.py
ui/: __init__.py  about_panel.py  dashboard.py  main_window.py  rfi_panel.py  settings_panel.py  signal_gallery.py  sky_map_panel.py  streaming_panel.py  theme.py  waterfall_viewer.py
web/: __init__.py  app.py
web/templates/: about.html  base.html  dashboard.html  reports.html  rfi.html  signals.html  skymap.html  streaming.html  waterfall.html
wiki/: API-Reference.md  Architecture.md  Benchmark-Results.md  Comparison-with-turboSETI.md  Home.md  ML-Model-Architecture.md  Pipeline-Deep-Dive.md  Rust-Core.md  Streaming-Mode.md
