[package]
name = "astroseti-core"
version = "0.1.0"
edition = "2021"
description = "High-performance SETI signal processing core — de-Doppler search, filterbank I/O, and RFI rejection in Rust with Python bindings."
license = "MIT"

[lib]
name = "astroseti_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
hdf5-support = ["hdf5"]

[dependencies]
rayon = "1.10"
ndarray = "0.16"
hdf5 = { version = "0.8", optional = true }
num-complex = "0.4"
rustfft = "6.2"
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
